WebCore/rendering/InlineFlowBox.h
@@ -38,9 +38,6 @@ public:
         , m_firstChild(0)
         , m_lastChild(0)
         , m_maxHorizontalVisualOverflow(0)
-        , m_includeLeftEdge(false)
-        , m_includeRightEdge(false)
-        , m_hasTextChildren(false)
     {
     }
 
@@ -132,9 +129,6 @@ protected:
     InlineBox* m_firstChild;
     InlineBox* m_lastChild;
     int m_maxHorizontalVisualOverflow;
-    bool m_includeLeftEdge : 1;
-    bool m_includeRightEdge : 1;
-    bool m_hasTextChildren : 1;
 };
 
 } // namespace WebCore
